fix: Re-add explicit static build to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
     {
       "src": "api/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "outputDirectory": "build" }
     }
   ],
   "routes": [
